[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Screens/Timer.gd" type="Script" id=1]
[ext_resource path="res://Images/UI/timer_ico.png" type="Texture" id=2]
[ext_resource path="res://Images/UI/timer_ico_hand.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Roboto_Medium.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.376471, 0.376471, 0.376471, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.219608, 0.219608, 0.219608, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id=2]
resource_name = "TimerAnimation"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("TimerHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Panel/TimerMargin/TimerBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Panel/TimerMargin/TimerBar:custom_styles/fg:bg_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1, 7.3, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.376471, 0.376471, 0.376471, 1 ), Color( 0.376471, 0.376471, 0.376471, 1 ), Color( 0.788235, 0, 0, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.376471, 0.376471, 0.376471, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Timer" type="HBoxContainer"]
margin_right = 480.0
margin_bottom = 72.0
script = ExtResource( 1 )

[node name="TimerIcon" type="Control" parent="."]
margin_right = 72.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )

[node name="Panel" type="Panel" parent="TimerIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="TimerAnim" type="AnimationPlayer" parent="TimerIcon"]
anims/TimerAnimation = SubResource( 2 )

[node name="Timer" type="Sprite" parent="TimerIcon"]
position = Vector2( 36, 36 )
texture = ExtResource( 2 )

[node name="TimerHand" type="Sprite" parent="TimerIcon"]
position = Vector2( 36, 40 )
texture = ExtResource( 3 )
offset = Vector2( 0, -4 )

[node name="Panel" type="Panel" parent="."]
margin_left = 76.0
margin_right = 480.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="TimerMargin" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="TimerBar" type="ProgressBar" parent="Panel/TimerMargin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 399.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_fonts/font = ExtResource( 4 )
value = 100.0
percent_visible = false
[connection signal="animation_finished" from="TimerIcon/TimerAnim" to="." method="_on_TimerAnim_animation_finished"]
